--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,12 @@
     -webkit-text-fill-color: transparent;
 }
 
+.fade-sub-title {
+    opacity: 0;
+    text-align: center;
+}
+
 .down {
     display: inline-block;
-    margin-top: 100%;
+    opacity: 0;
 }
